// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog /> Dialog all sizes match the snapshots 1`] = `
<div
  class="MuiDialogTitle-root css-1bsaraj"
  data-testid="dialog-title"
>
  <button
    class="MuiButtonBase-root MuiIconButton-root css-9d8zcy"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root css-11u5v9s"
          data-jest-file-name="IconXMarkSmall.svg"
          data-jest-svg-name="IconXMarkSmall"
          data-testid="IconXMarkSmall"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 14 14"
        />
      </div>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <h6
    class="MuiTypography-root css-tjnc3i MuiTypography-h6"
  >
    Title
  </h6>
  <h6
    class="MuiTypography-root css-n1r41c MuiTypography-h6"
  >
    Optional subtitle
  </h6>
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 2`] = `
<div
  class="MuiDialogContent-root css-11a3qtn"
  data-testid="dialog-content"
>
  Content Module
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 3`] = `
<div
  class="MuiDialogActions-root css-g76g3p MuiDialogActions-spacing"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined css-i2916s MuiButton-outlinedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Secondary Action
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained css-1rnfyys MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary Action
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 4`] = `
<div
  class="MuiDialogTitle-root css-1bsaraj"
  data-testid="dialog-title"
>
  <button
    class="MuiButtonBase-root MuiIconButton-root css-uqf3tp"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root css-11u5v9s"
          data-jest-file-name="IconXMarkLarge.svg"
          data-jest-svg-name="IconXMarkLarge"
          data-testid="IconXMarkLarge"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 32 32"
        />
      </div>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <h6
    class="MuiTypography-root css-tjnc3i MuiTypography-h6"
  >
    Title
  </h6>
  <h6
    class="MuiTypography-root css-n1r41c MuiTypography-h6"
  >
    Optional subtitle
  </h6>
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 5`] = `
<div
  class="MuiDialogContent-root css-11a3qtn"
  data-testid="dialog-content"
>
  Content Module
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 6`] = `
<div
  class="MuiDialogActions-root css-g76g3p MuiDialogActions-spacing"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined css-i2916s MuiButton-outlinedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Secondary Action
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained css-1rnfyys MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary Action
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 7`] = `
<div
  class="MuiDialogTitle-root css-1bsaraj"
  data-testid="dialog-title"
>
  <button
    class="MuiButtonBase-root MuiIconButton-root css-1ntphrv"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root css-11u5v9s"
          data-jest-file-name="IconXMarkLarge.svg"
          data-jest-svg-name="IconXMarkLarge"
          data-testid="IconXMarkLarge"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 32 32"
        />
      </div>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <h6
    class="MuiTypography-root css-tjnc3i MuiTypography-h6"
  >
    Title
  </h6>
  <h6
    class="MuiTypography-root css-n1r41c MuiTypography-h6"
  >
    Optional subtitle
  </h6>
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 8`] = `
<div
  class="MuiDialogContent-root css-11a3qtn"
  data-testid="dialog-content"
>
  Content Module
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 9`] = `
<div
  class="MuiDialogActions-root css-g76g3p MuiDialogActions-spacing"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined css-i2916s MuiButton-outlinedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Secondary Action
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained css-1rnfyys MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary Action
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 10`] = `
<div
  class="MuiDialogTitle-root css-1bsaraj"
  data-testid="dialog-title"
>
  <button
    class="MuiButtonBase-root MuiIconButton-root css-1ntphrv"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiIconButton-label"
    >
      <div
        class="css-jbvua0"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root css-11u5v9s"
          data-jest-file-name="IconXMarkLarge.svg"
          data-jest-svg-name="IconXMarkLarge"
          data-testid="IconXMarkLarge"
          fillcontrast="white"
          focusable="false"
          viewBox="0 0 32 32"
        />
      </div>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <h6
    class="MuiTypography-root css-tjnc3i MuiTypography-h6"
  >
    Title
  </h6>
  <h6
    class="MuiTypography-root css-n1r41c MuiTypography-h6"
  >
    Optional subtitle
  </h6>
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 11`] = `
<div
  class="MuiDialogContent-root css-11a3qtn"
  data-testid="dialog-content"
>
  Content Module
</div>
`;

exports[`<Dialog /> Dialog all sizes match the snapshots 12`] = `
<div
  class="MuiDialogActions-root css-g76g3p MuiDialogActions-spacing"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined css-i2916s MuiButton-outlinedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Secondary Action
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained css-1rnfyys MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary Action
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<Dialog /> renders Dialog left positioned buttons 1`] = `
<div
  class="MuiDialogActions-root css-15aacra MuiDialogActions-spacing"
  data-testid="dialog-actions"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained css-1rnfyys MuiButton-containedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary Action
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined css-i2916s MuiButton-outlinedPrimary"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Secondary Action
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<Dialog /> renders Dialog without title X button 1`] = `
<div
  class="MuiDialogTitle-root css-1bsaraj"
  data-testid="dialog-title"
>
  <h6
    class="MuiTypography-root css-tjnc3i MuiTypography-h6"
  >
    Title
  </h6>
  <h6
    class="MuiTypography-root css-n1r41c MuiTypography-h6"
  >
    Optional subtitle
  </h6>
</div>
`;
